fixed FindBugs findings